--- a/index.html
+++ b/index.html
@@ -232,6 +232,7 @@
 <body>
     <div class="container">
         <h1>Tic Tac Toe</h1>
+        <h2>Developed by @imbativeiss[🦋]</h2>
         
         <div class="player-turn">
             <div class="player" id="player1">
