--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8">
-  <title>Website Produk Imbativeiss</title>
+  <title>Imbativeiss Store</title>
   <style>
     body {
       margin: 0;
@@ -13,10 +13,10 @@
     }
 
     .header-img {
-      width: 100%;
-      border-bottom: 3px solid #444;
-      max-height: 250px;
-      object-fit: cover;
+  width: 100%;
+  height: auto;
+  border-bottom: 3px solid #444;
+  object-fit: contain;
     }
 
     .audio-player {
@@ -75,7 +75,8 @@
       border-radius: 10px;
       box-shadow: 0 0 10px #333;
       padding: 20px;
-      max-width: 300px;
+      width:90%;
+      max-width: 400px;
       margin: 30px auto;
     }
 
