--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
       <li>- Delay Hard</li>
       <li>- Blank + stuck logo ( click )</li>
     </ul>
-    <div class="contact"><a href="t.me/imbativeiss1">Hubungi Admin</a></div>
+    <div class="contact"><a href="https://t.me/imbativeiss1" target="_blank" rel="noopener noreferrer">Hubungi Admin</a></div>
   </div>
   
       <div class="card">
@@ -191,7 +191,7 @@
       <li>- Delay Hard</li>
       <li>- Blank + stuck logo ( click )</li>
     </ul>
-    <div class="contact"><a href="t.me/imbativeiss1">Hubungi Admin</a></div>
+    <div class="contact"><a href="https://t.me/imbativeiss1" target="_blank" rel="noopener noreferrer">Hubungi Admin</a></div>
   </div>
   
       <div class="card">
@@ -205,7 +205,7 @@
       <li>- Mendapatkan no enc full</li>
       <li>- Bisa jual sc kembali</li>
     </ul>
-    <div class="contact"><a href="t.me/imbativeiss1">Hubungi Admin</a></div>
+    <div class="contact"><a href="https://t.me/imbativeiss1" target="_blank" rel="noopener noreferrer">Hubungi Admin</a></div>
   </div>
   
         <div class="card">
@@ -214,15 +214,20 @@
     <div class="price">Ada produk yang kalian cari tetapi tidak ada di sini? silahkan hubungi admin!!!</div>
     <ul class="features">
       <li>Hubungi admin </li>
-    <div class="contact"><a href="t.me/imbativeiss1">Pencet aku📞</a></div>
+    <div class="contact"><a href="https://t.me/imbativeiss1" target="_blank" rel="noopener noreferrer">Hubungi Admin</a></div>
   </div>
 
 
   <!-- Kontak -->
   <h3>Contact Kami</h3>
   <div class="social-icons">
-    <a href="t.me/imbativeiss1"><img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="Telegram"></a>
-    <a href="wa.me/6285814207328"><img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp"></a>
+  <a href="https://t.me/imbativeiss1" target="_blank" rel="noopener noreferrer">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="Telegram" width="50" height="50">
+  </a>
+  <a href="https://wa.me/6285814207328" target="_blank" rel="noopener noreferrer">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" width="50" height="50">
+  </a>
+  </div>
   </div>
 
   <footer>© 2025 Imbativeiss | Semua Hak dilindungi</footer>
